--- a/map/norfolk.html
+++ b/map/norfolk.html
@@ -35,7 +35,7 @@
   </div>
   <div id='map' ></div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src='map.js'></script>
+  <script src='norfolk.js'></script>
 
 </body>
 </html>
