--- a/map/norfolk.html
+++ b/map/norfolk.html
@@ -15,6 +15,16 @@
     float: left;
     margin: 15px;
     padding: 15px;
+    clear: left;
+  }
+  #menu {
+    width: 200px;
+    /*border: solid black 1px;*/
+
+    /*height: 50px;*/
+    float: left;
+    margin-left: 15px;
+    padding-left: 15px;
   }
   #map {
     width: 800px;
@@ -25,7 +35,14 @@
 </head>
 <body>
   <!-- <script src="js/scripts.js"></script> -->
-  <div id=controls>
+
+  <div id='menu'>
+    <h3><a href='/'>Homepage</a></h3>
+  </div>
+
+  <div id='controls'>
+
+
     <input type="checkbox" id="usgs_1907" name="usgs_1907" checked>
     <label for="usgs_1907"> USGS 1907 </label><br>
     <input type="checkbox" id="vehicle2" name="vehicle2" >
