--- a/map/norfolk.html
+++ b/map/norfolk.html
@@ -37,7 +37,9 @@
   <!-- <script src="js/scripts.js"></script> -->
 
   <div id='menu'>
-    <h3><a href='/'>Homepage</a></h3>
+    <h3><a href='/'>Homepage</a><br>
+      <a href='/map'>map page</a>
+    </h3>
   </div>
 
   <div id='controls'>
