--- a/map/norfolk.html
+++ b/map/norfolk.html
@@ -47,7 +47,7 @@
 
     <input type="checkbox" id="usgs_1907" name="usgs_1907" checked>
     <label for="usgs_1907"> USGS 1907 </label><br>
-    <input type="checkbox" id="metes_bounds" name="metes_bounds" >
+    <input type="checkbox" id="metes_bounds" name="metes_bounds" checked >
     <label for="metes_bounds"> metes and bounds</label><br>
     <input type="checkbox" id="vehicle3" name="vehicle3" >
     <label for="vehicle3"> I have a boat</label><br>
