--- a/map/norfolk.html
+++ b/map/norfolk.html
@@ -49,8 +49,8 @@
     <label for="usgs_1907"> USGS 1907 </label><br>
     <input type="checkbox" id="metes_bounds" name="metes_bounds" checked >
     <label for="metes_bounds"> metes and bounds</label><br>
-    <input type="checkbox" id="vehicle3" name="vehicle3" >
-    <label for="vehicle3"> I have a boat</label><br>
+    <input type="checkbox" id="owners" name="owners" checked  >
+    <label for="owners">owners</label><br>
   </div>
   <div id='map' ></div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
