--- a/map/norfolk.html
+++ b/map/norfolk.html
@@ -51,7 +51,20 @@
     <label for="metes_bounds"> metes and bounds</label><br>
     <input type="checkbox" id="owners" name="owners" checked  >
     <label for="owners">owners</label><br>
-  </div>
+
+    <input type="checkbox" id="granbery" name="granbery" >
+    <label for="granbery">Granbery Nansemond</label><br>
+
+    <input type="checkbox" id="owners" name="owners" >
+    <label for="owners">owners</label><br>
+    <input type="checkbox" id="owners" name="owners" >
+    <label for="owners">owners</label><br>
+    <input type="checkbox" id="owners" name="owners" >
+    <label for="owners">owners</label><br>
+     <input type="checkbox" id="owners" name="owners" >
+    <label for="owners">owners</label><br>
+
+      </div>
   <div id='map' ></div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src='norfolk.js'></script>
