--- a/map/norfolk.html
+++ b/map/norfolk.html
@@ -55,14 +55,16 @@
     <input type="checkbox" id="granbery" name="granbery" >
     <label for="granbery">Granbery Nansemond</label><br>
 
-    <input type="checkbox" id="owners" name="owners" >
-    <label for="owners">owners</label><br>
-    <input type="checkbox" id="owners" name="owners" >
-    <label for="owners">owners</label><br>
-    <input type="checkbox" id="owners" name="owners" >
-    <label for="owners">owners</label><br>
-     <input type="checkbox" id="owners" name="owners" >
-    <label for="owners">owners</label><br>
+    <input type="checkbox" id="sykes_gwathmey_ul" name="sykes_gwathmey_ul" >
+    <label for="sykes_gwathmey_ul">Sykes and Gwathmey UL</label><br>
+     <input type="checkbox" id="sykes_gwathmey_ur" name="sykes_gwathmey_ur" >
+    <label for="sykes_gwathmey_ur">Sykes and Gwathmey UR</label><br>
+     <input type="checkbox" id="sykes_gwathmey_ll" name="sykes_gwathmey_ll" >
+    <label for="sykes_gwathmey_ll">Sykes and Gwathmey LL</label><br>
+     <input type="checkbox" id="sykes_gwathmey_lr" name="sykes_gwathmey_lr" >
+    <label for="sykes_gwathmey_lr">Sykes and Gwathmey LR</label><br>
+
+
 
       </div>
   <div id='map' ></div>
