--- a/map/norfolk.html
+++ b/map/norfolk.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My Page Title</title>
+  <title>Lower Norfolk Map</title>
   <meta name="description" content="My Page Description">
 
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
